# Energica-Configurator

./: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  vercel.json
.claude/: settings.local.json
api/: backend.py  requirements.txt
backend/: .env.example  compositor_service.py  extract_psd.py  patch_configs.py  pyproject.toml  requirements.txt  run.sh  test_ego_spec.py  test_essesse9_spec.py  test_eva_ribelle_spec.py  test_experia_spec.py  test_paolo_spec.py
backend/layers/ego/: config.json
backend/layers/essesse9/: config.json
backend/layers/eva_ribelle/: config.json
backend/layers/experia/: config.json
backend/tests/: test_compositor.py
frontend/: .env.production  README.md  package-lock.json  package.json
frontend/components/: EnergiccaConfigurator.tsx
frontend/pages/: _app.tsx  index.tsx  test.tsx
frontend/pages/api/compositor/: [...path].ts
frontend/styles/: energica-theme.css
frontend/utils/: api.ts
scripts/: extract-all.sh  setup.sh  upload_layers.mjs  upload_layers.py
