[project]
name = "energica-compositor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "psd-tools==1.9.30",
    "Pillow==11.0.0",
    "redis==5.2.0",
    "python-multipart==0.0.18",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
]

[tool.vercel]
entrypoint = "compositor_service:app"
